# noteforge

./: README.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: convert.rs  health.rs  mod.rs  test.rs  upload.rs
backend/src/config/: env.rs
backend/src/errors/: api_error.rs  mod.rs
backend/src/models/: document.rs
backend/src/services/: claude.rs  mod.rs  ocr.rs  pdf.rs
backend/src/utils/: headers.rs
frontend/src/: App.jsx
frontend/src/components/: FileUpload.jsx  LatexView.jsx  PdfView.jsx
frontend/src/services/: api.js
frontend/src/styles/: styles.css
