[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dotenv = "0.15"
http = "1.2.0"
anyhow = "1.0.95"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
mime = "0.3.17"
tesseract = "0.15.1"
image = "0.25.5"
futures = "0.3.31"
tempfile = "3.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
base64 = "0.22.1"
tectonic = "0.15.0"
